--- a/package.json
+++ b/package.json
@@ -29,6 +29,11 @@
     "babel-core": "6.26.3",
     "babel-preset-env": "1.7.0",
     "chai": "4.1.2",
+    "eslint": "^7.26.0",
+    "eslint-config-standard": "^16.0.2",
+    "eslint-plugin-import": "^2.22.1",
+    "eslint-plugin-node": "^11.1.0",
+    "eslint-plugin-promise": "^4.3.1",
     "file-system": "2.2.2",
     "jsdom": "9.2.1",
     "mocha": "5.2.0",
